# dehotfixer

./: .cruft.json  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  postbuild.template
cmake/: libarchive_hack.cmake
hotfixes/: .gitignore  archive.py  bl3_names.json  bl3_trunc.json  decompress.py  readme.md
hotfixes/mods/: speedrun_mod.json  speedrun_mod_v1.json
libs/kiero/: kiero.cpp  kiero.h
src/: d3d11_proxy.cpp  d3d11_proxy.h  dllmain.cpp  hfdat.cpp  hfdat.h  memory.cpp  memory.h  pch.h  settings.cpp  settings.h  time_travel.cpp  time_travel.h  vault_cards.cpp  vault_cards.h  version.h.in
src/gui/: dx11.cpp  dx11.h  dx12.cpp  dx12.h  gui.cpp  gui.h  hook.cpp  hook.h
src/hotfixes/: hooks.cpp  hooks.h  processing.cpp  processing.h  readme.md  unreal.cpp  unreal.h
